<resources>
    <string name="app_name">Apprentissage</string>
    <string name="loading_peers">Loading peers&#8230;</string>
    <string name="loading_folders">Loading folders&#8230;</string>
    <string name="cd_folders_list">Folders list</string>
    <string name="cd_peers_list">Peers list</string>
    <string name="cd_folder_name">Name of the folder</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="folder_add">Dossier ajouté</string>
    <string name="folder_deleted">Dossier supprimé</string>
    <string name="question_record">Enregistrer question</string>
    <string name="listen_question">ecouter question</string>
    <string name="record_answer">Enregistrer réponse</string>
    <string name="listen_answer">écouter réponse</string>
    <string name="register_quit">Enregistrer et quitter</string>
    <string name="register_create_another_peer">Enregistrer et créer une autre paire</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="pair_colon_id">Pair : %1$d</string>
    <string name="title_activity_listen_peers">ListenPeersActivity</string>
    <string name="play">Play</string>
    <string name="wrong">Faux</string>
    <string name="good">Bon</string>
    <string name="peer_idpeer">Pair : %d</string>
    <string name="_slash_">%d/%d</string>
    <string name="register_question">Question enregistré</string>
    <string name="register_answer">Réponse enregistré</string>
    <string name="validate">Valider</string>
    <string name="add_folder">Ajouter folder</string>
    <string name="name">Name</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="peer">peer</string>
    <string name="knowledge">Knowledge</string>
    <string name="add_peer">Ajouter pair</string>
    <string name="micro">micro</string>
    <string name="title_activity_folder_settings">Folder Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="auto_play">Auto play</string>
    <string name="pref_header_peer">Peer</string>
    <string name="desc">DESC</string>
    <string name="q_a"><![CDATA[Q -> A]]></string>
    <string name="a_q"><![CDATA[A -> Q]]></string>
    <string name="asc">ASC</string>
</resources>
